--- a/templates/super_distributor/add_super_distributor.html
+++ b/templates/super_distributor/add_super_distributor.html
@@ -34,6 +34,10 @@
                     <input name="password" type="password" placeholder="Password*" required>
                     <input type="password" placeholder="Re-Enter Password*" required>
                 </div>
+                <div class="sd-row">
+                    <label for="image">Super Distributor Image</label>
+                    <input type="file" class="form-control-file" id="image" name="image">
+                </div>
                 <br>
                 {% if role=='Manager' %}
                 <div class="sd-row">
