--- a/templates/admin/admin_index.html
+++ b/templates/admin/admin_index.html
@@ -2,7 +2,19 @@
 
 <div id="layoutSidenav_content">
     <main>
-        <div class="container-fluid px-4">
+        <div class="container-fluid px-4 mt-4">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
             <h1 class="mt-4">Admin</h1>
             <ol class="breadcrumb mb-4">
                 <li class="breadcrumb-item active">Dashboard</li>
@@ -63,7 +75,7 @@
                 </div>
             </div>
 
-            <!-- Existing Dashboard Content -->
+            <!-- Existing Dashboard Content 
             <div class="row">
                 <div class="col-xl-3 col-md-6">
                     <div class="card bg-primary text-white mb-4">
@@ -101,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>  -->
             <div class="row">
                 <div class="col-xl-6">
                     <div class="card mb-4">
