--- a/templates/kitchen/all_kitchens.html
+++ b/templates/kitchen/all_kitchens.html
@@ -13,8 +13,11 @@
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4">
+            
             <h2 class="text-center">Kitchens List</h2>
+            {% if role =='Admin' %}
             <p><b>Total Kitchens - {{ kitchen_count }}</b></p>
+            {% endif %}
         <!-- Display flash messages for success or error -->
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
