--- a/templates/edit_food_item.html
+++ b/templates/edit_food_item.html
@@ -6,7 +6,7 @@
     <main>
         <!-- Add Doctor Form Content Here -->
         <div class="sd-container">
-            <h2 class="sd-form">Edit Kitchen</h2>
+            <h2 class="sd-form">Edit Food Item</h2>
             <form method="post" class="sd-form" enctype="multipart/form-data">
                 <div class="sd-row">
                     <input name="name" type="text" value="{{ food_items.item_name }}" required>
