--- a/templates/admin/admin_header.html
+++ b/templates/admin/admin_header.html
@@ -32,8 +32,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">Settings</a></li>
-                        <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                        
                         <li><hr class="dropdown-divider" /></li>
                         <li><a class="dropdown-item" href="{{ url_for('admin_bp.logout') }}">Logout</a></li>
                     </ul>
@@ -45,8 +44,15 @@
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
+                            <p class="text-center">
+                                {% if encoded_image %}
+                                <div>
+                            <img src="data:image/jpeg;base64,{{ encoded_image }}" alt="Profile Image" class="profile-image" style="width: 80px; height: 80px;">
+                                </div>
+                                {% endif %}
+                            </p>
                             <p class="text-center"><b>Welcome !<br> {{ user_name }}</b></p>
-                            <div class="sb-sidenav-menu-heading">Core</div>
+                            
                                 <a class="nav-link" href="{{ url_for('admin_bp.admin_dashboard')}}">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                     Dashboard
@@ -118,9 +124,6 @@
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link collapsed" href="{{ url_for('cuisine.add_cuisine') }}">
                                     Add Cuisine
-                                </a>
-                                <a class="nav-link collapsed" href="#">
-                                    List Cuisine
                                 </a>
                             </nav>
                         </div>
