--- a/templates/admin/admin_profile.html
+++ b/templates/admin/admin_profile.html
@@ -1,6 +1,18 @@
 {% include 'admin/admin_header.html' %}
 <div id="layoutSidenav_content">
     <main>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
         <div class="container-fluid px-4">      
 
     <div class="profile-card">
@@ -11,26 +23,26 @@
         </div>
     {% endif %}
         
-        <div class="profile-name">{{admin.name}}</div>
+        <div class="profile-name">{{user.name}}</div>
         <div class="text-center text-muted">{{role}}</div>
 
         <div class="profile-details">
             <div class="info-item">
                 <span><strong>Email:</strong></span>
-                <span>{{admin.email}}</span>
+                <span>{{user.email}}</span>
             </div>
             <div class="info-item">
                 <span><strong>Phone:</strong></span>
-                <span>{{admin.contact}}</span>
+                <span>{{user.contact}}</span>
             </div>
             <div class="info-item">
                 <span><strong>Created at:</strong></span>
-                <span>{{admin.created_at}}</span>
+                <span>{{user.created_at}}</span>
             </div>
         </div>
 
         <div class="edit-btn">
-            <a href="{{ url_for('admin_bp.edit_admin', admin_id=admin.id) }}" class="btn btn-primary">Edit Profile</a>
+            <a href="{{ url_for('admin_bp.edit_admin', user_id=user.id) }}" class="btn btn-primary">Edit Profile</a>
         </div>
     </div>
 </div>
