--- a/templates/admin/edit_admin.html
+++ b/templates/admin/edit_admin.html
@@ -3,37 +3,33 @@
 {% endif %}
 <body>
 <div id="layoutSidenav_content">
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
+    
     <main>
         <!-- Add Doctor Form Content Here -->
         <div class="sd-container">
-            <h2 class="sd-form">Edit Admin</h2>
+            <h2 class="sd-form">Edit {{role}}</h2>
             <form method="post" class="sd-form" enctype="multipart/form-data">
                 <div class="sd-row">
-                    <input name="name" type="text" value="{{ admin.name }}" required>
+                    <input name="name" type="text" value="{{ user.name }}" required>
                 </div>
                 <div class="sd-row">
-                    <input name="email" type="email" value="{{ admin.email }}" required>
+                    <input name="email" type="email" value="{{ user.email }}" required>
                 </div>
                 <div class="sd-row">
-                    <input name="contact" type="text" value="{{ admin.contact }}" required>
+                    <input name="contact" type="text" value="{{ user.contact }}" required>
                 </div>
                 <div class="sd-row">
                     <label for="password" class="form-label">Password (Leave blank if unchanged)</label>
                     <input type="password" class="form-control" id="password" name="password">
                 </div>
                 <div class="sd-row">
+                    <p class="text-center">
+                        {% if encoded_image %}
+                        <div>
+                    <img src="data:image/jpeg;base64,{{ encoded_image }}" alt="Profile Image" class="profile-image" style="width: 80px; height: 80px;">
+                        </div>
+                        {% endif %}
+                    </p>
                     <label for="image" class="form-label">Profile Image (Optional)</label>
                     <input type="file" class="form-control-file" id="image" name="image">
                 </div>
