--- a/templates/edit_food_item.html
+++ b/templates/edit_food_item.html
@@ -17,7 +17,10 @@
                 <div class="sd-row">
                     <input name="price" type="text" value="{{ food_items.price }}" required>
                 </div>
-                
+                <div class="sd-row">
+                    <label for="image">Food Image</label>
+                    <input type="file" class="form-control-file" id="image" name="image">
+                </div>
                 <br>
                 <div class="sd-buttons">
                     <button type="submit" class="sd-submit">Update food item</button>
