Changes made for the Customer Route

--- a/templates/customer/index.html
+++ b/templates/customer/index.html
@@ -25,6 +25,7 @@
         <!-- Manager Cards -->
         <div class="row">
             {% for item in food_items %}
+            {% if item.status == 'activated' %}
                 <div class="col-md-4 mb-4"> <!-- Added margin-bottom for spacing between cards -->
                     <div class="card manager-card">
                         <div class="card-body manager-card-body">
@@ -45,6 +46,7 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
             {% endfor %}
         </div>
     </main>
