--- a/templates/order/my_orders.html
+++ b/templates/order/my_orders.html
@@ -9,7 +9,7 @@
                     <thead class="thead-dark">
                         <tr>
                             <th>Order ID</th>
-                            <th>Kitchen ID</th>
+                            <th>Kitchen Name</th>
                             <th>Status</th>
                             <th>Total Amount</th>
                             <th>Created At</th>
@@ -23,13 +23,13 @@
                         {% for order in orders_data %}
                             <tr class="animated fadeInUp">
                                 <td>{{ order.order_id }}</td>
-                                <td>{{ order.kitchen_id.name }}</td>
+                                <td>{{ order.kitchen_id }}</td>
                                 <td>{{ order.status }}</td>
                                 <td>${{ order.total_amount }}</td>
                                 <td>{{ order.created_at }}</td>
                                 <td>{{ order.updated_at }}</td>
                                 {% for item in order['items'] %}
-                                    <td>{{ item.item_id.name }}</td>
+                                    <td>{{ item.item_id }}</td>
                                     <td>{{ item.quantity}}</td>
                                 {% endfor %}
                                 <td>
